<resources>
    <string name="app_name">SearchAndFound</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="register">Registrieren</string>
    <string name="login">Anmelden</string>
    <string name="search">Verloren</string>
    <string name="found">Gefunden</string>
    <string name="user">Username</string>
    <string name="password">Passwort</string>
    <string name="loginbutton">Anmelden</string>
    <string name="surname">Vorname</string>
    <string name="lastname">Nachname</string>
    <string name="email">E-Mail</string>
    <string name="phone">Telefonnummer</string>
    <string name="adress">Adresse</string>
    <string name="itemname">Name</string>
    <string name="findervalue">Finderlohn</string>
    <string name="location">Ort</string>
    <string name="date">Datum</string>
    <string name="serialno">Seriennummer</string>
    <string name="description">Weitere Beschreibung</string>
    <string name="save">Speichern</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_lost">Lost</string>
    <string name="title_activity_found">Found</string>
    <string name="continueHome">Tap to continue</string>

</resources>
